# sudachi-wasm-sample

./: .gitignore  .gitmodules
html/: index.html  index.js  package.json
wasm/: .gitignore  Cargo.toml
wasm/html/: index.js  package.json
wasm/src/: lib.rs
yew/: Cargo.toml
yew/html/: index.html  index.js
yew/src/: lib.rs
