[package]
name = "sudachi-wasm-sample"
version = "0.1.0"
authors = ["vraisamis-UX305FA <quick.sorting.arg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = '1.4.0'
wasm-bindgen = '0.2.56'
sudachi = { path = '../sudachi.rs' }
