[package]
name = "sudachi-yew-sample"
version = "0.1.0"
authors = ["vraisamis <quick.sorting.arg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = '0.2.58'
yew = '0.11.0'
unic-normal = '0.9.0'

[dependencies.sudachi]
git = 'https://github.com/sorami/sudachi.rs'
rev = '3600c8e4d0d570b97593bd2ff23d3bb66ba42d47'
